Add Logo in header

--- a/web1.html
+++ b/web1.html
@@ -22,7 +22,7 @@
 <body>
     <section>  <!--header section-->
         <div class="header">
-            <img  src="./images/make-my-trip-high-resolution-logo-transparent (1).png" alt="logoOfApp" class="logo">
+            <img  src="./images/app logo.png" alt="logoOfApp" class="logo">
             <div class="inr-and-country">
                 <a href=""><i class="fa-solid fa-indian-rupee-sign inr-icon" style="margin-right:10px";></i></a>
                 <a href=""><i class="fa-solid fa-globe country-icon "></i></a>
